--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "suppressImplicitAnyIndexErrors": true,
+    // "resolveJsonModule": true,
+    // "esModuleInterop": true,
+    // "suppressImplicitAnyIndexErrors": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
